--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
         <!--<version>1.2</version>-->
         <!--</dependency>-->
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.14.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
